@@ -8,6 +8,9 @@ Trunk -  Unreleased
 
   IMPROVEMENTS
 
+    HIVE-983. Function from_unixtime takes long.
+    (Ning Zhang via zshao)
+
   OPTIMIZATIONS
 
   BUG FIXES
